testdata/fuzzdir/crashers/72cec4a1f45d74259fdb5b97752e906ec7278e8f.output
:0: Found identifier:"version", expected [:]
:0: Expected expression. Found =:"="
panic: runtime error: invalid memory address or nil pointer dereference [recovered]
	panic: runtime error: invalid memory address or nil pointer dereference
[signal 0xb code=0x1 addr=0x30 pc=0x508d8]

goroutine 1 [running]:
github.com/stephens2424/php.func·006()
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/parser.go:97 +0x605
github.com/stephens2424/php.(*Parser).parseTernaryOperation(0x2083f8000, 0x220838ee90, 0x2083dc0c0, 0x0, 0x0)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/operators.go:106 +0x218
github.com/stephens2424/php.(*Parser).parseOperation(0x2083f8000, 0x0, 0x220838ee90, 0x2083dc0c0, 0x0, 0x0)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/expression.go:145 +0x3d7
github.com/stephens2424/php.(*Parser).parseOperation(0x2083f8000, 0x0, 0x220838ee90, 0x2083dc080, 0x220838ee90, 0x2083dc0c0)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/expression.go:167 +0x297
github.com/stephens2424/php.(*Parser).parseOperation(0x2083f8000, 0x0, 0x220838ee10, 0x2083b4420, 0x220838ee90, 0x2083dc080)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/expression.go:167 +0x297
github.com/stephens2424/php.(*Parser).parseOperation(0x2083f8000, 0x0, 0x220838ed38, 0x208398020, 0x220838ee10, 0x2083b4420)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/expression.go:167 +0x297
github.com/stephens2424/php.(*Parser).parseExpression(0x2083f8000, 0x0, 0x0)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/expression.go:81 +0x12b
github.com/stephens2424/php.(*Parser).parseStmt(0x2083f8000, 0x0, 0x0)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/statements.go:81 +0x1e17
github.com/stephens2424/php.(*Parser).parseNode(0x2083f8000, 0x0, 0x0)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/parser.go:131 +0x39d
github.com/stephens2424/php.(*Parser).Parse(0x2083f8000, 0x241390, 0x8, 0x20837a900, 0x118, 0x2083b4390, 0x220838efe8, 0x208398200)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/parser.go:110 +0x5c6
github.com/stephens2424/php.Fuzz(0x220853c000, 0x118, 0x200000, 0x2083b4510)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/fuzz.go:21 +0x183
github.com/dvyukov/go-fuzz/go-fuzz-dep.Main(0x27ee90)
	/Users/stephen/go/src/github.com/dvyukov/go-fuzz/go-fuzz-dep/main.go:44 +0x13d
main.main()
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/go-fuzz-main/main.go:10 +0x2a

goroutine 6 [chan send]:
github.com/stephens2424/php/lexer.(*lexer).emit(0x2083b2060, 0x41)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/lexer/lexer.go:77 +0x2da
github.com/stephens2424/php/lexer.lexSingleQuotedStringLiteral(0x2083b2060, 0x27f2f8)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/lexer/lexers.go:189 +0xe7
github.com/stephens2424/php/lexer.(*lexer).run(0x2083b2060)
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/lexer/lexer.go:58 +0x9b
created by github.com/stephens2424/php/lexer.NewLexer
	/var/folders/6c/hxwdzv2n4vv363cpjk201md80000gn/T/go-fuzz-build666027188/src/github.com/stephens2424/php/lexer/lexer.go:46 +0x116
exit status 2